resources/experiment/0814-specgen/081403/log-AltitudeController_Original-2025_08_17_01_13_25.txt
public class AltitudeController_Original {
    /*@ requires Integer.MIN_VALUE < targetHeight - currentHeight;
      @ requires targetHeight - currentHeight < Integer.MAX_VALUE;
      @ ensures \result == (absError > 30 ? (error > 0 ? 5 : -5) :
      @                   absError > 20 ? (error > 0 ? 3 : -3) :
      @                   absError > 10 ? (error > 0 ? 2 : -2) :
      @                   error);
      @ ensures (absError > 30 ==> (\result == 5 || \result == -5)) &&
      @          (absError > 20 && absError <= 30 ==> (\result == 3 || \result == -3)) &&
      @          (absError > 10 && absError <= 20 ==> (\result == 2 || \result == -2)) &&
      @          (absError <= 10 ==> \result == error);
      @ ensures (error > 0 ==> \result >= 0) && (error < 0 ==> \result <= 0);
      @ ensures Math.abs(\result) <= 5;
      @*/
    public static int altitudeController(int currentHeight, int targetHeight) {
        int error = targetHeight - currentHeight;
        int absError = 0;
        absError = error < 0 ? -error : error;
        int controlSignal = 0;
        if (absError > 30) {
            controlSignal = error > 0 ? 5 : -5;
        } else if (absError > 20) {
            controlSignal = error > 0 ? 3 : -3;
        } else if (absError > 10) {
            controlSignal = error > 0 ? 2 : -2;
        } else {
            controlSignal = error;
        }
        return controlSignal;
    }
}
==============================
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:4: error: cannot find symbol
      @ ensures \result == (absError > 30 ? (error > 0 ? 5 : -5) :
                            ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:4: error: cannot find symbol
      @ ensures \result == (absError > 30 ? (error > 0 ? 5 : -5) :
                                             ^
  symbol:   variable error
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:5: error: cannot find symbol
      @                   absError > 20 ? (error > 0 ? 3 : -3) :
                          ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:5: error: cannot find symbol
      @                   absError > 20 ? (error > 0 ? 3 : -3) :
                                           ^
  symbol:   variable error
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:6: error: cannot find symbol
      @                   absError > 10 ? (error > 0 ? 2 : -2) :
                          ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:6: error: cannot find symbol
      @                   absError > 10 ? (error > 0 ? 2 : -2) :
                                           ^
  symbol:   variable error
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:7: error: cannot find symbol
      @                   error);
                          ^
  symbol:   variable error
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:8: error: cannot find symbol
      @ ensures (absError > 30 ==> (\result == 5 || \result == -5)) &&
                 ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:9: error: cannot find symbol
      @          (absError > 20 && absError <= 30 ==> (\result == 3 || \result == -3)) &&
                  ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:9: error: cannot find symbol
      @          (absError > 20 && absError <= 30 ==> (\result == 3 || \result == -3)) &&
                                   ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:10: error: cannot find symbol
      @          (absError > 10 && absError <= 20 ==> (\result == 2 || \result == -2)) &&
                  ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:10: error: cannot find symbol
      @          (absError > 10 && absError <= 20 ==> (\result == 2 || \result == -2)) &&
                                   ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:11: error: cannot find symbol
      @          (absError <= 10 ==> \result == error);
                  ^
  symbol:   variable absError
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:11: error: cannot find symbol
      @          (absError <= 10 ==> \result == error);
                                                ^
  symbol:   variable error
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:12: error: cannot find symbol
      @ ensures (error > 0 ==> \result >= 0) && (error < 0 ==> \result <= 0);
                 ^
  symbol:   variable error
  location: class AltitudeController_Original
/root/specgen/SpecGen/project/081403-specgen/tmp/AltitudeController_Original.java:12: error: cannot find symbol
      @ ensures (error > 0 ==> \result >= 0) && (error < 0 ==> \result <= 0);
                                                 ^
  symbol:   variable error
  location: class AltitudeController_Original
16 errors

==============================
public class AltitudeController_Original {
    /*@ requires Integer.MIN_VALUE < targetHeight - currentHeight;
      @ requires targetHeight - currentHeight < Integer.MAX_VALUE;
      @ ensures (Math.abs(targetHeight - currentHeight) > 30 ==> 
      @             (\result == 5 || \result == -5)) &&
      @          (Math.abs(targetHeight - currentHeight) > 20 && 
      @           Math.abs(targetHeight - currentHeight) <= 30 ==> 
      @             (\result == 3 || \result == -3)) &&
      @          (Math.abs(targetHeight - currentHeight) > 10 && 
      @           Math.abs(targetHeight - currentHeight) <= 20 ==> 
      @             (\result == 2 || \result == -2)) &&
      @          (Math.abs(targetHeight - currentHeight) <= 10 ==> 
      @             \result == targetHeight - currentHeight);
      @ ensures ((targetHeight > currentHeight) ==> \result >= 0) && 
      @         ((targetHeight < currentHeight) ==> \result <= 0);
      @ ensures Math.abs(\result) <= 5;
      @*/
    public static int altitudeController(int currentHeight, int targetHeight) {
        int error = targetHeight - currentHeight;
        int absError = 0;
        absError = error < 0 ? -error : error;
        int controlSignal = 0;
        if (absError > 30) {
            controlSignal = error > 0 ? 5 : -5;
        } else if (absError > 20) {
            controlSignal = error > 0 ? 3 : -3;
        } else if (absError > 10) {
            controlSignal = error > 0 ? 2 : -2;
        } else {
            controlSignal = error;
        }
        return controlSignal;
    }
}
==============================

==============================
